[gd_scene load_steps=8 format=3 uid="uid://cvhf0pyotf3qe"]

[ext_resource type="Script" path="res://Global/ui.gd" id="1_m5h7i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2khs"]
bg_color = Color(0.15, 0.15, 0.15, 0.243137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_728iy"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxmjj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_lkcuy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whiteBG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("whiteBG:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eitrb"]
resource_name = "screenshot"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whiteBG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("whiteBG:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hswl"]
_data = {
"RESET": SubResource("Animation_lkcuy"),
"screenshot": SubResource("Animation_eitrb")
}

[node name="GlobalUI" type="CanvasLayer"]
layer = 128
script = ExtResource("1_m5h7i")

[node name="debug" type="Node2D" parent="."]

[node name="text" type="Label" parent="debug"]
z_index = 4096
anchors_preset = -1
anchor_left = -0.100625
anchor_bottom = 0.11
offset_left = 1491.0
offset_top = 6.0
offset_right = 1593.0
offset_bottom = 29.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_p2khs")
text = "Loading list..."
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="screenshotPreview" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.701961)
position = Vector2(301, 184)
scale = Vector2(0.3, 0.3)

[node name="screenshotPreviewTimer" type="Timer" parent="screenshotPreview"]
wait_time = 2.0

[node name="Panel" type="Panel" parent="screenshotPreview"]
show_behind_parent = true
offset_left = -900.0
offset_top = -510.0
offset_right = 900.0
offset_bottom = 510.0
theme_override_styles/panel = SubResource("StyleBoxFlat_728iy")

[node name="filepath" type="Label" parent="screenshotPreview"]
offset_left = -887.0
offset_top = -503.0
offset_right = -230.0
offset_bottom = -132.0
scale = Vector2(2.7, 2.7)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Did not save."
vertical_alignment = 2
autowrap_mode = 2

[node name="whiteBG" type="Panel" parent="."]
visible = false
z_index = 4096
offset_left = -104.0
offset_top = -54.0
offset_right = 1736.0
offset_bottom = 976.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oxmjj")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4hswl")
}

[connection signal="timeout" from="screenshotPreview/screenshotPreviewTimer" to="." method="_on_screenshot_preview_timer_timeout"]
